<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|left"
        android:orientation="vertical">

    <TextView
        android:id="@+id/employee_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ding2"
        android:gravity="center"
        android:text="@string/customer_welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_red_light"
        android:shadowRadius="50"
        android:textStyle="bold"
        android:textSize="45sp" />
    <ImageView
        android:layout_width="102dp"
        android:layout_height="111dp"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:src="@drawable/logo"></ImageView>
    <Button
        android:id="@+id/list_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/ding2"
        android:padding="10dp"
        android:text="@string/list_items"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/add_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/ding2"
        android:padding="10dp"
        android:text="@string/add_items"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/check_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/ding2"
        android:padding="10dp"
        android:text="@string/check_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/remove_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/ding2"
        android:padding="10dp"
        android:text="@string/remove_items"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/ding2"
        android:padding="10dp"
        android:text="@string/checkout"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/loadCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/ding2"
        android:padding="10dp"
        android:text="@string/loadCart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/saveCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/ding2"
        android:padding="10dp"
        android:text="@string/saveCart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/exit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:background="@drawable/rounded_buttons"
        android:textColor="@android:color/holo_red_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:fontFamily="@font/ding2"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp" />

    </LinearLayout>

</ScrollView>