<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminScreens.PromoteEmployee">

    <TextView
        android:id="@+id/promotion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ding2"
        android:gravity="center"
        android:text="@string/Promote"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_red_light"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/empId"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:fontFamily="@font/ding2"
        android:gravity="center"
        android:text="@string/EmployeeId"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_red_light"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/employeeId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="@string/EmployeeId"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/promoteEmpConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/promote_emp"
        android:background="@drawable/rounded_buttons"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_red_light"
        android:textSize="25sp"
        android:fontFamily="@font/ding2"/>

    <Button
        android:id="@+id/promoteEmpExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/exit"
        android:background="@drawable/rounded_buttons"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_red_light"
        android:textSize="25sp"
        android:fontFamily="@font/ding2"/>


</LinearLayout>
