<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminScreens.adminOptions"
    android:background="@color/white"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcomeAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ding2"
        android:gravity="center"
        android:text="@string/admin_welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_red_light"
        android:textSize="45sp"
        android:layout_below="@+id/exit_button"/>


    <ImageView
        android:id="@+id/shoppingCart"
        android:layout_width="@dimen/imageLength"
        android:layout_height="@dimen/imageWidth"
        android:layout_below="@+id/welcomeAdmin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:src="@drawable/logo"></ImageView>

    <Button
        android:id="@+id/promoteEmpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/promote_emp"
        android:background="@drawable/rounded_buttons"
        android:textColor="@android:color/holo_red_light"
        android:elevation="10dp"
        android:padding="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/shoppingCart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:fontFamily="@font/ding2"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/viewBooksButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_books"
        android:background="@drawable/rounded_buttons"
        android:textColor="@android:color/holo_red_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:fontFamily="@font/ding2"
        android:elevation="10dp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/promoteEmpButton"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/historicAccounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HistoricAcc"
        android:background="@drawable/rounded_buttons"
        android:textColor="@android:color/holo_red_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:fontFamily="@font/ding2"
        android:elevation="10dp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/viewBooksButton"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:background="@drawable/rounded_buttons"
        android:textColor="@android:color/holo_red_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:fontFamily="@font/ding2"
        android:textSize="25dp"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/activeAccounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ActiveAcc"
        android:background="@drawable/rounded_buttons"
        android:textColor="@android:color/holo_red_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:fontFamily="@font/ding2"
        android:textSize="30dp"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/historicAccounts"/>

    </RelativeLayout>

</ScrollView>